--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@vueuse/core": "^13.6.0",
+    "axios": "^1.11.0",
     "gsap": "^3.13.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.18",
